--- a/Slides/FileReadOutput.ipynb
+++ b/Slides/FileReadOutput.ipynb
@@ -279,18 +279,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Listlər\n",
+      " # 1. Siyahı yaradın və bu siyahının elementlərini tərsinə çevirin.\n",
+      " # 2. Siyahı yaradın və bu siyahıya elementlərin cəmi hesablayın. sum() funksiyasını işlətməyin.\n",
+      " # 3. Siyahı yaradın və bu siyahıdakı elementləri kiçikdən böyüyə və ya böyüyün kiçiyinə sıralayın. İki üsulla yazın. Həm hazır list funksiyasından istifadə edərək. Həm etməyərək.\n",
+      " # 4. Verilmiş siyahıdakı bütün dublikat elementləri silmək üçün proqram yazın.\n",
+      " # 5. İki siyahı yaradın və bu iki siyahının kəsişməsini (ümumi elementlərini) tapan proqram yazın.\n",
+      " # 6. Siyahıdakı elementlərin ədədi ortasını və medianını hesablayan proqram yazın.\n",
+      " # 7. Siyahı yaradın və bu siyahıdakı elementləri elementin sayına görə çeşidləyən proqram yazın.  (Yəni, ən çox təkrarlanan elementdən ən az təkrarlanan elementə doğru)\n",
+      " # 8. Siyahıdakı bütün sadə ədədləri tapan proqram yazın.\n",
+      " z  "
+     ]
+    }
+   ],
    "source": [
     "# TODO: run me! This is the last way we'll cover in this notebook\n",
     "# to read the contents of a file\n",
-    "f = open(\"course_notes_demo.txt\", \"r\")\n",
+    "f = open(\"../suallar_copy.txt\", \"r\")\n",
     "for line in f:\n",
     "    # imagine that at the beginning of this list there is code\n",
     "    # that says\n",
     "    # line = f.readline()\n",
-    "    print(line)\n",
+    "    print(line, end= \" \")\n",
     "f.close()"
    ]
   },
@@ -329,39 +346,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Listlər\n",
+      "# 1. Siyahı yaradın və bu siyahının elementlərini tərsinə çevirin.\n",
+      "# 2. Siyahı yaradın və bu siyahıya elementlərin cəmi hesablayın. sum() funksiyasını işlətməyin.\n",
+      "# 3. Siyahı yaradın və bu siyahıdakı elementləri kiçikdən böyüyə və ya böyüyün kiçiyinə sıralayın. İki üsulla yazın. Həm hazır list funksiyasından istifadə edərək. Həm etməyərək.\n",
+      "# 4. Verilmiş siyahıdakı bütün dublikat elementləri silmək üçün proqram yazın.\n",
+      "# 5. İki siyahı yaradın və bu iki siyahının kəsişməsini (ümumi elementlərini) tapan proqram yazın.\n",
+      "# 6. Siyahıdakı elementlərin ədədi ortasını və medianını hesablayan proqram yazın.\n",
+      "# 7. Siyahı yaradın və bu siyahıdakı elementləri elementin sayına görə çeşidləyən proqram yazın.  (Yəni, ən çox təkrarlanan elementdən ən az təkrarlanan elementə doğru)\n",
+      "# 8. Siyahıdakı bütün sadə ədədləri tapan proqram yazın.\n",
+      "z \n"
+     ]
+    }
+   ],
    "source": [
-    "with open('../suallar_copy.txt') as reader:\n",
+    "with open('../suallar_copy.txt', \"r\") as reader:\n",
     "    # Further file processing goes here\n",
+    "    # for read in reader.readlines():\n",
+    "    #     print(read, end= \" \")\n",
     "    print(reader.read())\n",
-    "    pass"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Listlər\n",
+      "\n",
+      "# 1. Siyahı yaradın və bu siyahının elementlərini tərsinə çevirin.\n",
+      "\n",
+      "# 2. \n",
+      "Siyah\n",
+      "ı yaradın və bu siyahıya elementlərin cəmi hesablayın. sum() funksiyasını işlətməyin.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('../suallar_copy.txt', 'r') as reader:\n",
     "    # Read & print the first 5 characters of the line 5 times\n",
-    "    print(reader.readline(5))\n",
+    "    print(reader.readline(100))\n",
     "    # Notice that line is greater than the 5 chars and continues\n",
     "    # down the line, reading 5 chars each time until the end of the\n",
     "    # line and then \"wraps\" around\n",
+    "    print(reader.readline(500))\n",
     "    print(reader.readline(5))\n",
     "    print(reader.readline(5))\n",
-    "    print(reader.readline(5))\n",
-    "    print(reader.readline(5))"
+    "    print(reader.readline(-10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Listlər\n",
+      "# 1. Siyahı yaradın və bu siyahının elementlərini tərsinə çevirin.\n",
+      "# 2. Siyahı yaradın və bu siyahıya elementlərin cəmi hesablayın. sum() funksiyasını işlətməyin.\n",
+      "# 3. Siyahı yaradın və bu siyahıdakı elementləri kiçikdən böyüyə və ya böyüyün kiçiyinə sıralayın. İki üsulla yazın. Həm hazır list funksiyasından istifadə edərək. Həm etməyərək.\n",
+      "# 4. Verilmiş siyahıdakı bütün dublikat elementləri silmək üçün proqram yazın.\n",
+      "# 5. İki siyahı yaradın və bu iki siyahının kəsişməsini (ümumi elementlərini) tapan proqram yazın.\n",
+      "# 6. Siyahıdakı elementlərin ədədi ortasını və medianını hesablayan proqram yazın.\n",
+      "# 7. Siyahı yaradın və bu siyahıdakı elementləri elementin sayına görə çeşidləyən proqram yazın.  (Yəni, ən çox təkrarlanan elementdən ən az təkrarlanan elementə doğru)\n",
+      "# 8. Siyahıdakı bütün sadə ədədləri tapan proqram yazın.\n",
+      "z "
+     ]
+    }
+   ],
    "source": [
     "with open('../suallar_copy.txt', 'r') as reader:\n",
     "    for line in reader.readlines():\n",
