--- a/Slides/using_modules_1.ipynb
+++ b/Slides/using_modules_1.ipynb
@@ -84,19 +84,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "                                  2023\n",
+      "\n",
+      "      January                   February                   March\n",
+      "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+      "                   1             1  2  3  4  5             1  2  3  4  5\n",
+      " 2  3  4  5  6  7  8       6  7  8  9 10 11 12       6  7  8  9 10 11 12\n",
+      " 9 10 11 12 13 14 15      13 14 15 16 17 18 19      13 14 15 16 17 18 19\n",
+      "16 17 18 19 20 21 22      20 21 22 23 24 25 26      20 21 22 23 24 25 26\n",
+      "23 24 25 26 27 28 29      27 28                     27 28 29 30 31\n",
+      "30 31\n",
+      "\n",
+      "       April                      May                       June\n",
+      "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+      "                1  2       1  2  3  4  5  6  7                1  2  3  4\n",
+      " 3  4  5  6  7  8  9       8  9 10 11 12 13 14       5  6  7  8  9 10 11\n",
+      "10 11 12 13 14 15 16      15 16 17 18 19 20 21      12 13 14 15 16 17 18\n",
+      "17 18 19 20 21 22 23      22 23 24 25 26 27 28      19 20 21 22 23 24 25\n",
+      "24 25 26 27 28 29 30      29 30 31                  26 27 28 29 30\n",
+      "\n",
+      "        July                     August                  September\n",
+      "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+      "                1  2          1  2  3  4  5  6                   1  2  3\n",
+      " 3  4  5  6  7  8  9       7  8  9 10 11 12 13       4  5  6  7  8  9 10\n",
+      "10 11 12 13 14 15 16      14 15 16 17 18 19 20      11 12 13 14 15 16 17\n",
+      "17 18 19 20 21 22 23      21 22 23 24 25 26 27      18 19 20 21 22 23 24\n",
+      "24 25 26 27 28 29 30      28 29 30 31               25 26 27 28 29 30\n",
+      "31\n",
+      "\n",
+      "      October                   November                  December\n",
+      "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+      "                   1             1  2  3  4  5                   1  2  3\n",
+      " 2  3  4  5  6  7  8       6  7  8  9 10 11 12       4  5  6  7  8  9 10\n",
+      " 9 10 11 12 13 14 15      13 14 15 16 17 18 19      11 12 13 14 15 16 17\n",
+      "16 17 18 19 20 21 22      20 21 22 23 24 25 26      18 19 20 21 22 23 24\n",
+      "23 24 25 26 27 28 29      27 28 29 30               25 26 27 28 29 30 31\n",
+      "30 31\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import calendar as cal\n",
     "\n",
     "# get the day number of the given year, month, day\n",
     "# 0 is Monday, 1 is Tuesday, 2 is Wednesday, etc\n",
-    "day_num = cal.weekday(2019, 8, 26)\n",
+    "day_num = cal.weekday(2019, 8, 5)\n",
     "print(day_num)\n",
     "\n",
     "# get a string calendar for a given year\n",
-    "c = cal.calendar(2019)\n",
+    "c = cal.calendar(2023)\n",
     "print(c)"
    ]
   },
@@ -142,9 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "from calendar import weekday\n",
     "\n",
@@ -179,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
