--- a/Jupyters/FileReadOutput.ipynb
+++ b/Jupyters/FileReadOutput.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,21 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: run me! This cell will create a file \"course_notes_demo.txt\"\n",
     "# What is in the file now?\n",
     "f = open(\"course_notes_demo.txt\", \"w\")\n",
-    "f.write(\"pineapples\")\n",
+    "f.write(\"pineapples\\n\")\n",
     "f.write(\"kiwis\")\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
